<resources>
    <string name="app_name">Финтех</string>

    <!--Main Activity-->
    <string name="main_chances_button_text">Оценить свои шансы</string>
    <string name="main_stat_button_text">Посмотреть статистику группы</string>
    <string name="main_fintech_logo_text">Тинькофф Финтех</string>
    <string name="main_description_text">Оцени свою возможность пройти на стажировку в Тинькофф Финтех</string>

    <!--Chances Activity-->
    <string name="chances_name_text">Выберите Ваше имя</string>
    <string name="chances_choose_internship_text">Выберите стажировку</string>

    <!--School Fragment-->
    <string name="school_text">Финтех школа\nComing soon...</string>

    <!--Account Fragment-->
    <string name="account_text">Аккаунт в приложении\nComing soon...</string>

    <!--Post item-->
    <string name="post_item_value_text">Важное</string>
    <string name="post_item_date_text">Дата поста</string>
    <string name="post_item_content_text">Контент поста, контент поста, контент поста, контент поста, контент поста, контент поста</string>

    <!--Internship item-->
    <string name="internship_item_name_text">Название стажировки</string>
    <string name="internship_item_places_text">13 мест</string>
    <string name="internship_item_description_text">Описание стажировки, описание стажировки, описание стажировки, описание стажировки, описание стажировки</string>
    <string name="internship_item_exams_text">Экзамены: программирование, математика</string>


</resources>
