<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@drawable/rounded_main_layout">

    <ImageView
        android:id="@+id/post_item_value_pic"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/value_red"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/post_item_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/post_item_value_pic"
        android:textColor="@color/colorBlack"
        android:text="@string/post_item_value_text"/>

    <TextView
        android:id="@+id/post_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentRight="true"
        android:textColor="@color/colorBlack"
        android:text="@string/post_item_date_text"/>


    <TextView
        android:id="@+id/post_item_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/post_item_date"
        android:textColor="@color/colorBlack"
        android:text="@string/post_item_content_text"/>

</RelativeLayout>