<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_logo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:text="@string/main_fintech_logo_text"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@+id/main_logo_layout"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:text="@string/main_description_text"/>

    <Button
        android:id="@+id/main_chances_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:stateListAnimator="@null"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:background="@drawable/rounded_button"
        android:text="@string/main_chances_button_text"/>

    <Button
        android:id="@+id/main_stat_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:stateListAnimator="@null"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:background="@drawable/rounded_button"
        android:text="@string/main_stat_button_text"/>

</RelativeLayout>